Add memory limits for worker data retention

--- a/settings.toml
+++ b/settings.toml
@@ -8,3 +8,8 @@ output_dir = "."
 split_count = 0
 last_prime_only = true
 wheel_type = "Mod30"
+max_log_lines = 2000
+max_explore_points = 10000
+max_gap_events = 50000
+max_density_points = 20000
+max_spiral_cells = 400000
