--- a/settings.toml
+++ b/settings.toml
@@ -6,10 +6,7 @@ writer_buffer_size = 8388608
 output_format = "Binary"
 output_dir = "."
 split_count = 0
-last_prime_only = true
+last_prime_only = false
 wheel_type = "Mod30"
-max_log_lines = 2000
-max_explore_points = 10000
-max_gap_events = 50000
-max_density_points = 20000
-max_spiral_cells = 400000
+memory_usage_percent = 50.0
+use_timestamp_prefix = true
